--- a/style.css
+++ b/style.css
@@ -129,13 +129,13 @@ background: url("imagens/fundo.png") center/cover no-repeat;
   flex-direction: column;   /* empilha verticalmente */
   align-items: center;      /* centraliza horizontalmente */
 display: none;
-  gap: 16px; /* espaço entre texto e botão */
+  gap: 2px; /* espaço entre texto e botão */
 }
 
 #msgFim {
   overflow-wrap: break-word;
-  margin-top: 5px;
-  padding: 16px 24px;
+  margin: 0px;
+  padding: 10px 16px;
   font-size: 18px;
   background-color: #0288d1;
   color: white;
@@ -150,7 +150,7 @@ display: none;
 
 /* 🔁 Botão de reinício */
 #btnReiniciar, #btnJogar {
-  margin-top: 1px;
+  margin-top: 4px;
   padding: 12px 24px;
   font-size: 18px;
   background-color: #0288d1;
@@ -598,14 +598,15 @@ a.acertou path:hover {
   }
 }
 
-  #confetti-container {
+    #confetti-container {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+  height: 100vh;
       pointer-events: none;
       z-index: 9999;
+       overflow: hidden;
     }
 
     .confetti {
@@ -622,7 +623,13 @@ a.acertou path:hover {
       0% {
         transform: translateY(0) rotate(0deg);
       }
-      100% {@media (max-width: 600px) {
+      100% {
+        transform: translateY(100vh) rotate(360deg);
+      }
+    }
+
+
+  100% {@media (max-width: 600px) {
   body {
     font-size: 14px;
     padding: 8px;
@@ -758,7 +765,9 @@ display: none;
 
 @media (max-width: 600px), (max-height: 400px) {
    #estadoAtualContainer {
-    top: 200px;
+
+    padding: 5px 10px;
+    top: 180px;
    left: 60%;
   
 }
@@ -768,18 +777,25 @@ display: none;
 @media (max-width: 600px), (max-height: 400px) {
   #pontuacao {
  
-  top: 20px;
+  top: 130px;
   right: 15px;
 
     padding: 10px;
         font-size: 16px;
-    
-  
-  
-
+}
 }
 
+@media (max-width: 600px), (max-height: 400px) {
+  #msgFim {
+  margin: 0px;
+  font-size: 16px;
+  border-radius: 0px;
+  max-width: 100%;
+
 }
+}
+
+
 
 
 
